test/testData/parser/negative/expressions/sizeof.err
test/testData/parser/negative/expressions/sizeof.c:5:11: error: invalid application of 'sizeof' to an incomplete type 'STRUCT S'
test/testData/parser/negative/expressions/sizeof.c:6:18: error: use of undeclared identifier 'c'
